# simple-sqlite

./: CMakeLists.txt  README.md  SQLite.c  constants.c  constants.h  cursor.c  cursor.h  input.c  input.h  main.c  meta_command.c  meta_command.h  node.c  node.h  row.c  row.h  statement.c  statement.h  table.c  table.h  utils.c  utils.h
original-code/: SQLite.c
spec/: db_test_spec.rb  spec_helper.rb
